--- a/ishraq-step-main/learn/levels.html
+++ b/ishraq-step-main/learn/levels.html
@@ -65,7 +65,7 @@
 
     /* --- الهيدر والشعار --- */
     .brand-header {
-      text-align: center;
+      ttttt-align: center;
       margin-bottom: 40px;
       padding-top: 20px;
       animation: fadeInDown 1s ease;
@@ -82,10 +82,10 @@
       font-size: 28px;
       font-weight: 800;
       color: #fff;
-      text-transform: uppercase;
+      ttttt-transform: uppercase;
       letter-spacing: 1px;
       margin-bottom: 5px;
-      text-shadow: 0 0 20px rgba(255, 138, 0, 0.3);
+      ttttt-shadow: 0 0 20px rgba(255, 138, 0, 0.3);
     }
     
     .page-subtitle {
@@ -105,7 +105,7 @@
       color: #fff;
       padding: 12px 25px;
       border-radius: 30px;
-      text-decoration: none;
+      ttttt-decoration: none;
       margin-bottom: 20px;
       transition: all 0.3s ease;
       cursor: pointer;
@@ -203,7 +203,7 @@
       color: var(--primary-orange);
       font-weight: 700;
       margin-bottom: 5px;
-      text-transform: uppercase;
+      ttttt-transform: uppercase;
       letter-spacing: 1px;
     }
 
@@ -285,7 +285,7 @@
       border-radius: 30px;
       box-shadow: 0 30px 80px rgba(0,0,0,0.5);
       z-index: 20001;
-      text-align: center;
+      ttttt-align: center;
       display: none;
       width: 90%;
       max-width: 450px;
@@ -442,7 +442,7 @@
         const langInfo = levelData[currentLang];
         if (!langInfo) return;
 
-        langTitle.textContent = langInfo.name;
+        langTitle.tttttContent = langInfo.name;
         levelsContainer.innerHTML = '';
 
         // تحديد مستوى المستخدم الحالي في هذه اللغة
