--- a/ishraq-step-main/update/RRR/index.html
+++ b/ishraq-step-main/update/RRR/index.html
@@ -13,7 +13,7 @@
       <p>أدخل اسمك وارفع صورتك لتبدأ إدارة الدردشة.</p>
 
       <label>الاسم</label>
-      <input id="ownerName" type="text" placeholder="اسم الرئيس">
+      <input id="ownerName" type="ttttt" placeholder="اسم الرئيس">
 
       <label>صورتك (اختياري)</label>
       <input id="ownerAvatar" type="file" accept="image/*">
@@ -35,7 +35,7 @@
     const btn = document.getElementById('enterOwner');
     const info = document.getElementById('info');
 
-    function setInfo(txt) { info.innerText = txt; }
+    function setInfo(txt) { info.innerttttt = txt; }
 
     btn.addEventListener('click', async () => {
       const name = nameEl.value.trim();
