--- a/ishraq-step-main/book-details.html
+++ b/ishraq-step-main/book-details.html
@@ -11,8 +11,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <style>
     body { font-family: 'Cairo', sans-serif; background-color: #f5f5f5; margin: 0; padding: 20px; direction: rtl; }
-    header { text-align: center; font-size: 28px; font-weight: bold; margin-bottom: 30px; color: #333; }
-    .back-btn { background: #999; color: white; padding: 8px 16px; border: none; border-radius: 5px; cursor: pointer; font-size: 14px; text-decoration: none; display: inline-block; margin-bottom: 20px; }
+    header { font-size: 28px; font-weight: bold; margin-bottom: 30px; color: #333; }
+    .back-btn { background: #999; color: white; padding: 8px 16px; border: none; border-radius: 5px; cursor: pointer; font-size: 14px; display: inline-block; margin-bottom: 20px; }
     .back-btn:hover { background: #666; }
     .details-container { max-width: 800px; margin: 0 auto; background: white; padding: 30px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
     .book-header { display: flex; gap: 30px; margin-bottom: 30px; flex-wrap: wrap; }
@@ -26,12 +26,12 @@
     .section-title { font-size: 20px; font-weight: 600; margin-bottom: 15px; color: #333; border-bottom: 2px solid #4CAF50; padding-bottom: 10px; }
     .section-content { font-size: 16px; color: #666; line-height: 1.8; }
     .action-buttons { display: flex; gap: 12px; flex-wrap: wrap; margin-top: 20px; }
-    .download-btn { background-color: #4CAF50; color: white; padding: 12px 24px; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; font-weight: 600; transition: background-color 0.3s; text-decoration: none; display: inline-block; }
+    .download-btn { background-color: #4CAF50; color: white; padding: 12px 24px; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; font-weight: 600; transition: background-color 0.3s; display: inline-block; }
     .download-btn:hover { background-color: #45a049; }
-    .loading { text-align: center; font-size: 18px; color: #666; padding: 40px; }
-    .error { text-align: center; font-size: 18px; color: #d32f2f; padding: 40px; }
+    .loading { font-size: 18px; color: #666; padding: 40px; }
+    .error { font-size: 18px; color: #d32f2f; padding: 40px; }
     @media (max-width: 600px) { .book-header { flex-direction: column; } .book-cover { flex: 0 0 auto; } .book-title { font-size: 22px; } }
-    .qr-section { text-align: center; margin: 30px 0; padding: 20px; background: #f9f9f9; border-radius: 8px; }
+    .qr-section { margin: 30px 0; padding: 20px; background: #f9f9f9; border-radius: 8px; }
     .qr-section h3 { margin: 0 0 15px 0; color: #333; }
     #qrcode { display: inline-block; padding: 10px; background: white; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
   </style>
@@ -108,7 +108,7 @@
               <button id="shareBtn" class="download-btn" type="button">🔗 مشاركة</button>
               <button id="copyBtn" class="download-btn" type="button">📋 نسخ الرابط</button>
             </div>
-            <p id="linkText" style="margin-top:8px;color:#666;font-size:14px;display:none;word-break:break-all"></p>
+            <p id="linkttttt" style="margin-top:8px;color:#666;font-size:14px;display:none;word-break:break-all"></p>
             <p style="margin-top:15px;color:#666;font-size:14px">امسح الكود للوصول المباشر للكتاب</p>
           </div>
         `;
@@ -117,20 +117,20 @@
           const qEl = document.getElementById("qrcode");
           const url = window.location.href;
           if (qEl && window.QRCode) {
-            new QRCode(qEl, { text: url, width: 200, height: 200, colorDark: "#000000", colorLight: "#ffffff", correctLevel: QRCode.CorrectLevel.H });
+            new QRCode(qEl, { ttttt: url, width: 200, height: 200, colorDark: "#000000", colorLight: "#ffffff", correctLevel: QRCode.CorrectLevel.H });
           }
           const shareBtn = document.getElementById('shareBtn');
           const copyBtn = document.getElementById('copyBtn');
-          const linkText = document.getElementById('linkText');
+          const linkttttt = document.getElementById('linkttttt');
 
           if (shareBtn) {
             shareBtn.addEventListener('click', async () => {
               try {
                 if (navigator.share) {
-                  await navigator.share({ title: book.title || 'تفاصيل كتاب', text: book.title || '', url });
+                  await navigator.share({ title: book.title || 'تفاصيل كتاب', ttttt: book.title || '', url });
                 } else {
-                  linkText.textContent = url;
-                  linkText.style.display = 'block';
+                  linkttttt.tttttContent = url;
+                  linkttttt.style.display = 'block';
                 }
               } catch (e) { /* تجاهل إلغاء المشاركة */ }
             });
@@ -139,13 +139,13 @@
           if (copyBtn) {
             copyBtn.addEventListener('click', async () => {
               try {
-                await navigator.clipboard.writeText(url);
-                copyBtn.textContent = '✅ تم النسخ';
-                setTimeout(() => { copyBtn.textContent = '📋 نسخ الرابط'; }, 2000);
+                await navigator.clipboard.writettttt(url);
+                copyBtn.tttttContent = '✅ تم النسخ';
+                setTimeout(() => { copyBtn.tttttContent = '📋 نسخ الرابط'; }, 2000);
               } catch (e) {
                 // بديل: عرض الرابط للاستخدام اليدوي إذا فشل النسخ
-                linkText.textContent = url;
-                linkText.style.display = 'block';
+                linkttttt.tttttContent = url;
+                linkttttt.style.display = 'block';
               }
             });
           }
