--- a/ishraq-step-main/learn/profile.html
+++ b/ishraq-step-main/learn/profile.html
@@ -40,7 +40,7 @@
       border: 1px solid var(--glass-border);
       border-radius: 35px;
       padding: 40px 20px;
-      text-align: center;
+      ttttt-align: center;
       position: relative;
     }
 
@@ -75,7 +75,7 @@
       display: none; align-items: center; justify-content: center;
       z-index: 1000; backdrop-filter: blur(8px);
     }
-    .dialog-box { background: #151515; width: 90%; max-width: 350px; padding: 30px; border-radius: 25px; text-align: right; }
+    .dialog-box { background: #151515; width: 90%; max-width: 350px; padding: 30px; border-radius: 25px; ttttt-align: right; }
     .dialog-box input { width: 100%; padding: 12px; background: #202020; border: 1px solid #333; color: #fff; border-radius: 12px; margin-bottom: 20px; outline: none; }
     .dialog-buttons { display: flex; gap: 10px; }
     .btn-confirm { flex: 2; background: var(--primary-orange); color: #000; }
@@ -129,7 +129,7 @@
   <div id="nameDialog" class="dialog-overlay">
     <div class="dialog-box">
       <h3>تعديل اسمك</h3>
-      <input type="text" id="newNameInput">
+      <input type="ttttt" id="newNameInput">
       <div class="dialog-buttons">
         <button class="btn btn-confirm" onclick="saveName()">حفظ</button>
         <button class="btn btn-cancel" onclick="closeDialogs()">إلغاء</button>
@@ -140,7 +140,7 @@
   <div id="avatarDialog" class="dialog-overlay">
     <div class="dialog-box">
       <h3>تحديث الصورة</h3>
-      <input type="text" id="newAvatarInput" placeholder="رابط الصورة المباشر">
+      <input type="ttttt" id="newAvatarInput" placeholder="رابط الصورة المباشر">
       <div class="dialog-buttons">
         <button class="btn btn-confirm" onclick="saveAvatar()">تحديث</button>
         <button class="btn btn-cancel" onclick="closeDialogs()">إلغاء</button>
@@ -153,7 +153,7 @@
     // هذه الدوال ستعمل دائماً سواء كان هناك إنترنت أم لا
     function openNameDialog() {
         const dialog = document.getElementById('nameDialog');
-        const currentName = document.getElementById('userNameDisplay').innerText;
+        const currentName = document.getElementById('userNameDisplay').innerttttt;
         document.getElementById('newNameInput').value = currentName;
         dialog.style.display = 'flex';
     }
@@ -223,14 +223,14 @@
                 currentUserKey = Object.keys(data)[0];
                 const userData = data[currentUserKey];
 
-                document.getElementById('userNameDisplay').innerText = userData.name || "مستخدم";
+                document.getElementById('userNameDisplay').innerttttt = userData.name || "مستخدم";
                 document.getElementById('profileImg').src = userData.avatarUrl || "";
-                document.getElementById('roleDisplay').innerText = userData.role || "طالب";
+                document.getElementById('roleDisplay').innerttttt = userData.role || "طالب";
                 
-                document.getElementById('javaCount').innerText = userData.java || 0;
-                document.getElementById('cppCount').innerText = userData.cpp || 0;
-                document.getElementById('pythonCount').innerText = userData.python || 0;
-                document.getElementById('jsCount').innerText = userData.javascript || 0;
+                document.getElementById('javaCount').innerttttt = userData.java || 0;
+                document.getElementById('cppCount').innerttttt = userData.cpp || 0;
+                document.getElementById('pythonCount').innerttttt = userData.python || 0;
+                document.getElementById('jsCount').innerttttt = userData.javascript || 0;
             }
         });
     }
