--- a/ishraq-step-main/tests.html
+++ b/ishraq-step-main/tests.html
@@ -11,10 +11,10 @@
 <style>
   :root{--accent:#4caf50}
   body{font-family:'Cairo',sans-serif;margin:0;background:linear-gradient(135deg,#0b0b0d 0%,#071018 100%);color:#e8eef6;padding:28px;direction:rtl}
-  header{font-weight:800;color:var(--accent);text-align:center;font-size:20px;margin-bottom:18px}
+  header{font-weight:800;color:var(--accent);font-size:20px;margin-bottom:18px}
   .container{max-width:1100px;margin:0 auto}
   .sections{display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:12px}
-  .section-card{background:linear-gradient(135deg,var(--accent),#00bcd4);color:#fff;padding:16px;border-radius:12px;text-align:center;cursor:pointer;box-shadow:0 6px 20px rgba(0,0,0,.4)}
+  .section-card{background:linear-gradient(135deg,var(--accent),#00bcd4);color:#fff;padding:16px;border-radius:12px;cursor:pointer;box-shadow:0 6px 20px rgba(0,0,0,.4)}
   .loader{display:flex;gap:10px;align-items:center;justify-content:center;padding:12px;background:#fff;color:#333;border-radius:10px;margin:12px 0}
   .spinner{width:18px;height:18px;border:3px solid #ddd;border-top-color:var(--accent);border-radius:50%;animation:spin 1s linear infinite}
   @keyframes spin{to{transform:rotate(360deg)}}
@@ -23,13 +23,13 @@
   .test-meta{flex:1}
   .test-meta h3{margin:0 0 6px 0;color:#ffd166;font-size:18px}
   .test-meta p{margin:0;color:#af9aa8}
-  .back{display:inline-block;margin:12px 0;padding:8px 12px;background:#fff;color:var(--accent);border-radius:8px;text-decoration:none}
+  .back{display:inline-block;margin:12px 0;padding:8px 12px;background:#fff;color:var(--accent);border-radius:8px;}
   .muted{color:#9aa3af;font-size:13px}
   .loading-overlay{position:fixed;inset:0;background:rgba(0,0,0,0.8);display:flex;align-items:center;justify-content:center;z-index:10000;flex-direction:column;gap:20px}
   .loading-overlay.hidden{display:none}
   .loading-spinner{width:60px;height:60px;border:4px solid rgba(255,255,255,0.2);border-top-color:#fff;border-radius:50%;animation:spin-large 0.8s linear infinite}
   @keyframes spin-large{to{transform:rotate(360deg)}}
-  .loading-text{color:#fff;font-size:16px;text-align:center}
+  .loading-ttttt{color:#fff;font-size:16px;}
 </style>
 
   <link rel="stylesheet" href="css/open-sidebar.css">
@@ -37,13 +37,13 @@
 <body>
   <div id="loadingOverlay" class="loading-overlay">
     <div class="loading-spinner"></div>
-    <div class="loading-text">جاري تحميل البيانات...</div>
+    <div class="loading-ttttt">جاري تحميل البيانات...</div>
   </div>
   
   <input type="checkbox" id="toggleSidebar">
  <label for="toggleSidebar" class="toggle-btn">
-  ☰ القائمة
- </label>
+  ☰ 
+</label>
  
  <iframe id="siteSidebar" src="sidebar.html"></iframe>
 
@@ -61,7 +61,7 @@
       <div id="tests-list"></div>
     </div>
 
-    <div id="empty" class="muted" style="display:none;text-align:center;margin-top:18px">لم تُضاف اختبارات بعد.</div>
+    <div id="empty" class="muted" style="display:none; margin-top:18px">لم تُضاف اختبارات بعد.</div>
   </div>
 
   <script type="module">
@@ -106,7 +106,7 @@
       subjects.forEach(s=>{
         const d = document.createElement('div');
         d.className = 'section-card';
-        d.textContent = s || 'عام';
+        d.tttttContent = s || 'عام';
         d.addEventListener('click', ()=> showTestsForSubject(s));
         sectionsEl.appendChild(d);
       });
@@ -121,7 +121,7 @@
     });
 
     function showTestsForSubject(subject){
-      subjectTitle.textContent = subject;
+      subjectTitle.tttttContent = subject;
       testsList.innerHTML = '';
       testsView.style.display = 'block';
       sectionsEl.scrollIntoView({behavior:'smooth'});
@@ -150,8 +150,8 @@
               <div class="muted" style="margin-top:8px">الدرجة: ${escapeHtml(String(item.maxScore||'—'))} • المدة: ${escapeHtml(String(item.duration||'—'))} دقائق</div>
             </div>
             <div style="display:flex;flex-direction:column;gap:8px">
-              <a href="test.html?id=${encodeURIComponent(id)}" style="background:#fff;color:var(--accent);padding:8px 10px;border-radius:8px;text-decoration:none;font-weight:700">دخول الأختبار</a>
-              ${ item.fileUrl ? `<a href="${escapeAttr(item.fileUrl)}" target="_blank" style="background:#222;color:#fff;padding:8px 10px;border-radius:8px;text-decoration:none">فتح الملف</a>` : '' }
+              <a href="test.html?id=${encodeURIComponent(id)}" style="background:#fff;color:var(--accent);padding:8px 10px;border-radius:8px;ttttt-decoration:none;font-weight:700">دخول الأختبار</a>
+              ${ item.fileUrl ? `<a href="${escapeAttr(item.fileUrl)}" target="_blank" style="background:#222;color:#fff;padding:8px 10px;border-radius:8px;ttttt-decoration:none">فتح الملف</a>` : '' }
             </div>
           `;
           testsList.appendChild(div);
@@ -168,6 +168,16 @@
       e.preventDefault();
       testsView.style.display = 'none';
       sectionsEl.scrollIntoView({behavior:'smooth'});
+    });
+
+   sidebarToggle.addEventListener('change', function() {
+        if(this.checked) {
+            btnIcon.tttttContent = '✕';
+            document.body.style.overflow = 'hidden'; // تجميد المحتوى الخلفي
+        } else {
+            btnIcon.tttttContent = '☰';
+            document.body.style.overflow = 'auto';
+        }
     });
 
     function escapeHtml(s){ return (s||'').toString().replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;'); }
