--- a/index.html
+++ b/index.html
@@ -1,108 +1,171 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>جاري التحميل...</title>
-  <link rel="icon" href="icon.png" type="image/png">
-  <link rel="apple-touch-icon" href="icon.png">
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      background: #000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ishraq step | الافتتاح الكبير 2026</title>
+    <style>
+        :root {
+            --primary-color: #00d2ff;
+            --secondary-color: #3a7bd5;
+            --bg-dark: #0f172a;
+        }
 
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+            color: white;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+        }
 
-      color: #fff;
-      font-family: 'Cairo', sans-serif;
-      overflow: hidden;
-    }
+        .container {
+            text-align: center;
+            max-width: 800px;
+            padding: 20px;
+            z-index: 1;
+        }
 
-    .logo {
-      font-size: 26px;
-      font-weight: 700;
-      letter-spacing: 1px;
-      margin-bottom: 25px;
-      color: #ffb300;
-      animation: glow 1s infinite alternate;
-    }
+        .logo {
+            font-size: 3rem;
+            font-weight: bold;
+            margin-bottom: 10px;
+            background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            filter: drop-shadow(0 0 10px rgba(0, 210, 255, 0.3));
+        }
 
-    @keyframes glow {
-      from { text-shadow: 0 0 5px #ffb300, 0 0 10px #ffb300; }
-      to { text-shadow: 0 0 20px #ffb300, 0 0 40px #ffb300; }
-    }
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
 
-    .loader {
-      display: flex;
-      gap: 5px;
-    }
+        p {
+            font-size: 1.2rem;
+            color: #94a3b8;
+            line-height: 1.6;
+        }
 
-    .dot {
-      width: 15px;
-      height: 15px;
-      border-radius: 50%;
-      background: #ffb300;
-      animation: bounce 1s infinite alternate;
-    }
+        /* العداد التنازلي */
+        .countdown {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 40px 0;
+        }
 
-    .dot:nth-child(2) { animation-delay: 0.1s; }
-    .dot:nth-child(3) { animation-delay: 0.2s; }
+        .time-box {
+            background: rgba(255, 255, 255, 0.05);
+            padding: 20px;
+            border-radius: 15px;
+            min-width: 100px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(5px);
+        }
 
-    @keyframes bounce {
-      from { transform: translateY(0); opacity: 0.3; }
-      to { transform: translateY(-15px); opacity: 1; }
-    }
+        .time-box span {
+            display: block;
+            font-size: 2.5rem;
+            font-weight: bold;
+            color: var(--primary-color);
+        }
 
-    .progress {
-      width: 150px;
-      height: 4px;
-      background: rgba(255,255,255,0.1);
-      margin-top: 25px;
-      border-radius: 2px;
-      overflow: hidden;
-      position: relative;
-    }
+        .time-box label {
+            font-size: 0.9rem;
+            color: #64748b;
+            text-transform: uppercase;
+        }
 
-    .progress span {
-      position: absolute;
-      top: 0; left: 0;
-      height: 100%;
-      width: 0%;
-      background: linear-gradient(90deg, #f2ff00, #ff7b00);
-      border-radius: 2px;
-      animation: fill 3.5s linear forwards;
-    }
+        .announcement {
+            background: rgba(0, 210, 255, 0.1);
+            padding: 15px 30px;
+            border-radius: 50px;
+            border: 1px dashed var(--primary-color);
+            display: inline-block;
+            margin-top: 20px;
+            font-weight: bold;
+        }
 
-    @keyframes fill {
-      from { width: 0%; }
-      to { width: 100%; }
-    }
+        /* تأثيرات خلفية */
+        .glow {
+            position: absolute;
+            width: 300px;
+            height: 300px;
+            background: var(--primary-color);
+            filter: blur(150px);
+            opacity: 0.1;
+            border-radius: 50%;
+            top: 20%;
+            right: 10%;
+        }
 
-  </style>
-   <!--ads-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116"
-     crossorigin="anonymous">
-      </script>
-      <!--ads-->
+        @media (max-width: 600px) {
+            .countdown { gap: 10px; }
+            .time-box { min-width: 70px; padding: 10px; }
+            .time-box span { font-size: 1.5rem; }
+            h1 { font-size: 1.8rem; }
+        }
+    </style>
 </head>
 <body>
 
-  <div class="logo">ishraq step منصة</div>
-  <div class="loader">
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-  </div>
-  <div class="progress"><span></span></div>
-  <script>
-    setTimeout(() => {
-     window.location.href = "ishraq-step-main/chat/start.html";
-    }, 3500);
-  </script>
+    <div class="glow"></div>
 
+    <div class="container">
+        <div class="logo">Ishraq step</div>
+        <h1>نحن نقوم بتحديث Ishraq step تعلم برمجه اكثر احترافية اكواد مرتبة<br> ترقبوا الإطلاق الرسمي للنسخة المطورة.</h1>
+        <div class="countdown" id="timer">
+            <div class="time-box">
+                <span id="days">00</span>
+                <label>يوم</label>
+            </div>
+            <div class="time-box">
+                <span id="hours">00</span>
+                <label>ساعة</label>
+            </div>
+            <div class="time-box">
+                <span id="minutes">00</span>
+                <label>دقيقة</label>
+            </div>
+            <div class="time-box">
+                <span id="seconds">00</span>
+                <label>ثانية</label>
+            </div>
+        </div>
+
+        <div class="announcement">
+            موعدنا: 20 فبراير 2026
+        </div>
+    </div>
+
+    <script>
+        const targetDate = new Date("Feb 20, 2026 00:00:00").getTime();
+
+        const countdown = setInterval(function() {
+            const now = new Date().getTime();
+            const distance = targetDate - now;
+
+            const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+            document.getElementById("days").innerHTML = days.toString().padStart(2, '0');
+            document.getElementById("hours").innerHTML = hours.toString().padStart(2, '0');
+            document.getElementById("minutes").innerHTML = minutes.toString().padStart(2, '0');
+            document.getElementById("seconds").innerHTML = seconds.toString().padStart(2, '0');
+
+            if (distance < 0) {
+                clearInterval(countdown);
+                document.getElementById("timer").innerHTML = "<h1>مرحباً بكم في الإطلاق الكبير!</h1>";
+            }
+        }, 1000);
+    </script>
 </body>
 </html>
