--- a/ishraq-step-main/sidebar.html
+++ b/ishraq-step-main/sidebar.html
@@ -48,6 +48,7 @@
         <a class="link" href="chat/chat.html"><span>💬</span><span class="link-text">التعليقات</span></a>
         <a class="link" href="learn/profile.html"><span>💻</span><span class="link-text">حسابك الشخصي</span></a>
         <a class="link" href="tasks.html"><span>📋</span><span class="link-text">المهام</span></a>
+         <a class="link" href="english-b-terms\index.html"><span>🧾</span><span class="link-text">مصطلحات برمجة بي الانجليزية</span></a>
       </nav>
 
       <div class="small">الأدوات</div>
