--- a/ishraq-step-main/index.html
+++ b/ishraq-step-main/index.html
@@ -82,21 +82,12 @@
           ابدء بي التعلم
         </button>
 
-        <button class="btn btn-join" id="postsBtn" onclick="location.href='tasks.html'">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <rect x="3" y="5" width="18" height="4" rx="1" fill="white" opacity="0.95"/>
-            <rect x="3" y="11" width="18" height="4" rx="1" fill="white" opacity="0.8"/>
-            <rect x="3" y="17" width="18" height="2" rx="1" fill="white" opacity="0.6"/>
-          </svg>
-          ✨ قوالب للزينة  ✨
-        </button>
-
-        <button class="btn btn-join" id="grop" onclick="location.href='https://codepen.io/'">
+        <button class="btn btn-join" id="grop" onclick="window.open('https://codepen.io/', '_blank');">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M12 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8z" fill="white" opacity="0.9"/>
             <path d="M3 20c1-4 7-6 9-6s8 2 9 6" stroke="rgba(255,255,255,0.08)" stroke-width="1.6" stroke-linecap="round"/>
           </svg>
-          ✨ مجتمع المبرمجين ✨
+          ✨ انتقل الي مجتمع المبرمجين✨
         </button>
       </div>
     </section>
