--- a/settings.html
+++ b/settings.html
@@ -21,10 +21,9 @@
             color: var(--text);
             margin: 0;
             padding: 0;
-            line-height: 1.7;
+            line-height: 1.8;
         }
 
-        /* حاوية الصفحة */
         .page-container {
             max-width: 1000px;
             margin: 40px auto;
@@ -34,7 +33,6 @@
             overflow: hidden;
         }
 
-        /* الهيدر */
         header {
             background: var(--primary);
             color: var(--white);
@@ -45,10 +43,8 @@
         header h1 { margin: 0; font-size: 2.5rem; }
         header p { margin-top: 10px; opacity: 0.9; }
 
-        /* المحتوى */
         .content { padding: 40px; }
 
-        /* التنسيقات الداخلية */
         h2 {
             color: var(--secondary);
             border-bottom: 2px solid var(--border);
@@ -62,21 +58,17 @@
         p, li { font-size: 1rem; color: #555; }
         
         ul { margin-right: 20px; }
-        li { margin-bottom: 8px; }
+        li { margin-bottom: 10px; }
 
-        /* صندوق التحذير القانوني */
         .legal-alert {
-            background-color: #fff5f5;
-            border-right: 4px solid var(--accent);
+            background-color: #e3f2fd;
+            border-right: 4px solid var(--secondary);
             padding: 15px 20px;
             margin: 20px 0;
-            color: #c0392b;
+            color: #0d47a1;
             font-weight: 600;
         }
 
-        .highlight { font-weight: bold; color: #000; }
-
-        /* الفوتر */
         footer {
             background: #2c3e50;
             color: #bdc3c7;
@@ -85,7 +77,6 @@
             font-size: 0.9rem;
         }
 
-        /* زر العودة */
         .back-btn {
             display: inline-block;
             margin-top: 20px;
@@ -110,87 +101,70 @@
 <div class="page-container">
     <header>
         <h1>Ishraq-Step.xyz</h1>
-        <p>اتفاقية شروط الاستخدام وسياسة الخصوصية الشاملة</p>
+        <p>اتفاقية الاستخدام، إخلاء المسؤولية، وسياسة الخصوصية</p>
     </header>
 
     <div class="content">
         <p><strong>تاريخ آخر تحديث:</strong> 26 يناير 2026</p>
-        <p>أهلاً بك في منصة <strong>إشراق-ستيب</strong>. هذه الاتفاقية تمثل عقداً قانونياً ملزماً بينك (بصفتك "المستخدم" أو "الطالب") وبين إدارة منصة إشراق-ستيب. يرجى قراءة البنود بدقة، حيث أن استخدامك للمنصة يعني موافقتك الكاملة عليها.</p>
+        <p>أهلاً بك في منصة <strong>إشراق-ستيب (Ishraq-Step)</strong>. نحن منصة تعليمية تفاعلية تعتمد على نظام المراحل والنصوص التعليمية لتبسيط البرمجة وجعلها في متناول الجميع.</p>
+        <p>إن وصولك واستخدامك لهذه المنصة يعني موافقتك الصريحة والكاملة على البنود والشروط الموضحة أدناه.</p>
 
-        <h2>1. حقوق الملكية الفكرية والحماية من التقليد</h2>
+        <h2>1. طبيعة الخدمة ومجانية المحتوى</h2>
         <div class="legal-alert">
-            تنبيه هام: نحن نطبق سياسة "صفر تسامح" تجاه سرقة المحتوى أو محاولات استنساخ المنصة.
+            نقدم محتوى نصياً وتفاعلياً مجانياً بالكامل (100% Free).
         </div>
         <ul>
-            <li><strong>ملكية المحتوى:</strong> كافة المواد التعليمية، الفيديوهات، النصوص، الاختبارات، المخططات البيانية، والشفرات البرمجية (Source Code) الخاصة بواجهة وتشغيل الموقع هي ملكية حصرية لمنصة إشراق-ستيب ومحمية بموجب قوانين حماية حقوق المؤلف والملكية الفكرية الدولية والمحلية.</li>
-            <li><strong>حظر الهندسة العكسية:</strong> يُمنع منعاً باتاً محاولة تفكيك برمجيات الموقع، أو عمل "هندسة عكسية" (Reverse Engineering) لفهم آلية عمل الموقع أو نسخها.</li>
-            <li><strong>حظر المنافسة غير المشروعة:</strong> لا يجوز استخدام محتوى المنصة لبناء موقع منافس، أو تدريس نفس المناهج في منصات أخرى، أو استنساخ الهوية البصرية وتجربة المستخدم (UI/UX).</li>
-            <li><strong>العلامة التجارية:</strong> شعار "Ishraq-Step" والاسم التجاري لا يجوز استخدامهما دون إذن كتابي.</li>
+            <li><strong>نظام المراحل:</strong> تعتمد المنصة على أسلوب "التعلم المقروء" (Text-Based Learning) ونظام التدرج في المراحل (Steps). جميع الدروس، المقالات، والأمثلة التوضيحية متاحة مجاناً ولا تتطلب أي رسوم مالية.</li>
+            <li><strong>الوصول الحر:</strong> لا توجد أي عوائق مادية (Paywalls) تمنعك من الوصول إلى المعلومات. هدفنا نشر المعرفة التقنية.</li>
+            <li><strong>التحديثات:</strong> يحق للمنصة تحديث النصوص، إضافة مراحل جديدة، أو تعديل المسارات التعليمية في أي وقت لضمان جودة وحداثة المعلومات.</li>
         </ul>
 
-        <h2>2. ترخيص استخدام الكود البرمجي</h2>
-        <p>بما أننا منصة لتعليم البرمجة، نوضح الحقوق كالتالي:</p>
+        <h2>2. حقوق الملكية الفكرية (للمحتوى المكتوب)</h2>
+        <p>المحتوى المجاني لا يعني التخلي عن حقوق التأليف والنشر. الجهد المبذول في صياغة الدروس وترتيبها محمي قانونياً:</p>
         <ul>
-            <li><strong>الكود التعليمي (المشروح في الدروس):</strong> يُسمح لك بنسخ الأكواد التي يتم شرحها في الدروس واستخدامها في مشاريعك الشخصية أو التجارية (لبناء تطبيقاتك الخاصة). الهدف هو أن تتعلم وتبني.</li>
-            <li><strong>منع إعادة البيع:</strong> لا يُسمح لك بجمع هذه الأكواد وإعادة بيعها كحزمة "قوالب" أو "مكتبة أكواد" أو كورس تعليمي.</li>
-            <li><strong>مشاريع الطلاب:</strong> أي كود تكتبه أنت بنفسك كحل للتحديات أو المشاريع هو ملك لك بنسبة 100%.</li>
+            <li><strong>النصوص والشروحات:</strong> جميع المقالات، النصوص التعليمية، طريقة سرد المعلومات، وهيكلية المراحل (Curriculum Structure) هي ملكية حصرية لمنصة "إشراق-ستيب".</li>
+            <li><strong>حظر النسخ والنشر:</strong> يُمنع منعاً باتاً نسخ نصوص الدروس وإعادة نشرها في مدونات أخرى، منتديات، أو منصات تواصل اجتماعي، سواء كان ذلك بنسبتها للمصدر أو بدونه.</li>
+            <li><strong>الاستخدام الشخصي:</strong> يُسمح لك بنسخ الملاحظات لأغراض المذاكرة الشخصية والأرشفة الخاصة بك فقط.</li>
         </ul>
 
-        <h2>3. شروط العضوية والحسابات</h2>
+        <h2>3. ترخيص استخدام الأكواد (Code License)</h2>
+        <p>نحن نعلمك البرمجة لتبني، لذا فإن سياستنا تجاه الأكواد مرنة:</p>
         <ul>
-            <li><strong>الاستخدام الفردي فقط:</strong> الاشتراك في المنصة هو ترخيص فردي. يُمنع مشاركة بيانات الدخول مع أي شخص آخر. تمتلك المنصة أنظمة تقنية لكشف تعدد الدخول (Multi-login detection) وسيتم حظر الحساب فوراً دون استرجاع أموال في حال ثبوت المشاركة.</li>
-            <li><strong>صحة البيانات:</strong> أنت تتعهد بتقديم بيانات حقيقية عند التسجيل.</li>
-            <li><strong>أمان الحساب:</strong> أنت مسؤول عن الحفاظ على سرية كلمة المرور الخاصة بك.</li>
+            <li><strong>حرية الاستخدام:</strong> الأكواد البرمجية (Snippets) المكتوبة داخل الدروس والنصوص التوضيحية متاح لك نسخها واستخدامها بحرية في مشاريعك الخاصة أو التجارية.</li>
+            <li><strong>ملكيتك للإجابات:</strong> الحلول والأكواد التي تكتبها أنت لاجتياز المراحل أو حل التحديات هي ملك خاص بك.</li>
+            <li><strong>القيد الوحيد:</strong> لا يجوز تجميع محتوى المنصة النصي والأكواد المشروحة لإنشاء "كتب إلكترونية" أو "دورات نصية" وبيعها أو توزيعها، فهذا يعتبر انتهاكاً لحقوقنا الفكرية.</li>
         </ul>
 
-        <h2>4. المدفوعات وسياسة الاسترداد</h2>
+        <h2>4. سياسة الشهادات (Certificates)</h2>
+        <div class="legal-alert" style="border-color: #f57c00; color: #e65100; background-color: #fff3e0;">
+            تنويه هام: الشهادات تقديرية وليست أكاديمية
+        </div>
+        <p>نود أن نكون واضحين تماماً بشأن الشهادات التي تمنحها المنصة عند إتمام المسارات:</p>
         <ul>
-            <li><strong>الرسوم:</strong> يتم تحصيل رسوم الدورات بالعملة الموضحة في صفحة الدفع.</li>
-            <li><strong>سياسة الاسترداد (Refund Policy):</strong> (اختر ما يناسبك: "نظراً لطبيعة المنتجات الرقمية، لا يمكن استرداد المبلغ بعد مشاهدة أكثر من 10% من المحتوى" أو "نضمن استرداد الأموال خلال 14 يوماً بشرط عدم تحميل ملفات الدورة").</li>
-            <li><strong>الاشتراكات:</strong> في حال الاشتراك الشهري/السنوي، يتم التجديد تلقائياً ما لم يقم المستخدم بالإلغاء قبل موعد التجديد بـ 24 ساعة.</li>
+            <li><strong>شهادات إتمام مراحل (Honorary Certificates):</strong> هي وثائق رمزية تُمنح تلقائياً عند إتمامك قراءة جميع النصوص واجتيازك للمراحل المحددة في المسار التعليمي بنجاح.</li>
+            <li><strong>الغرض منها:</strong> هذه الشهادات تهدف لتحفيزك وتوثيق مجهودك الشخصي وإتمامك للمنهج، ويمكنك إضافتها لسيرتك الذاتية كدليل على التعلم الذاتي.</li>
+            <li><strong>الاعتماد:</strong> هذه الشهادات <strong>غير معتمدة</strong> من جامعات أو جهات حكومية رسمية، وقيمتها الحقيقية تكمن في المهارة التي اكتسبتها وقدرتك على تطبيق ما قرأته عملياً.</li>
         </ul>
 
-        <h2>5. قواعد السلوك (Code of Conduct)</h2>
-        <p>يُحظر على المستخدم:</p>
+        <h2>5. سياسة الخصوصية</h2>
+        <p>بياناتك أمانة لدينا:</p>
         <ul>
-            <li>استخدام برمجيات "الزحف" (Scraping) أو الـ Bots لسحب البيانات.</li>
-            <li>نشر أكواد خبيثة (Malware) أو فيروسات في خانات تسليم المشاريع.</li>
-            <li>الإساءة للآخرين في مجتمع المنصة أو التعليقات.</li>
+            <li><strong>البيانات المحفوظة:</strong> نحفظ تقدمك في المراحل (Progress)، واسمك وبريدك الإلكتروني لغرض إصدار الشهادات ومتابعة تطورك التعليمي.</li>
+            <li><strong>عدم المشاركة:</strong> نلتزم بعدم بيع أو مشاركة بياناتك مع أي أطراف إعلانية خارجية.</li>
         </ul>
 
-        <h2>6. سياسة الخصوصية (Privacy Policy)</h2>
-        <p>نحن نحترم خصوصيتك ونلتزم بحماية بياناتك:</p>
-        <h3>أ. المعلومات التي نجمعها:</h3>
+        <h2>6. إخلاء المسؤولية (Disclaimer)</h2>
         <ul>
-            <li>بيانات الهوية: الاسم، البريد الإلكتروني، الدولة.</li>
-            <li>بيانات تقنية: عنوان IP، نوع المتصفح، ونظام التشغيل (لأغراض الحماية والأمان).</li>
-            <li>بيانات التقدم: نسبة إنجاز الدورات ونتائج الاختبارات.</li>
-        </ul>
-        <h3>ب. كيف نستخدم بياناتك:</h3>
-        <ul>
-            <li>لإدارة حسابك وتوفير المحتوى التعليمي.</li>
-            <li>لإرسال تحديثات الدورات والعروض (يمكنك إلغاء الاشتراك في أي وقت).</li>
-            <li><strong>مشاركة البيانات:</strong> لا نقوم ببيع بياناتك لأي طرف ثالث. قد نشارك البيانات فقط مع بوابات الدفع لإتمام العمليات المالية بشكل آمن.</li>
+            <li><strong>دقة المعلومات:</strong> نبذل قصارى جهدنا لتكون النصوص البرمجية والشروحات دقيقة ومحدثة، لكن البرمجة مجال متجدد، لذا يتم تقديم المحتوى "كما هو" دون ضمانات مطلقة بخلوه من الأخطاء المطبعية أو التقنية.</li>
+            <li><strong>مسؤولية التطبيق:</strong> المنصة غير مسؤولة عن أي أضرار قد تلحق ببرامجك أو أجهزتك نتيجة التطبيق الخاطئ للأكواد أو الشروحات الواردة في النصوص.</li>
         </ul>
 
-        <h2>7. حدود المسؤولية</h2>
-        <ul>
-            <li>المنصة تقدم محتوى تعليمي "كما هو". نحن لا نضمن خلو الكود من الأخطاء البرمجية بنسبة 100% ولا نتحمل مسؤولية أي خسائر ناتجة عن استخدامك للكود في بيئة إنتاجية (Production) دون مراجعة.</li>
-            <li>نحن لا نضمن توظيفك فور انتهاء الدورة، فالأمر يعتمد على مجهودك الشخصي وسوق العمل.</li>
-        </ul>
-
-        <h2>8. إنهاء الخدمة</h2>
-        <p>تحتفظ "إشراق-ستيب" بالحق في تعليق أو إنهاء حسابك فوراً ودون سابق إنذار في حال انتهاك أي من هذه الشروط، وخاصة البنود المتعلقة بالملكية الفكرية ومشاركة الحساب.</p>
-
-        <h2>9. القانون واجب التطبيق</h2>
-        <p>تخضع هذه الشروط لقوانين دولتك</p>
-
-        <a href="index.html" class="back-btn">العودة للرئيسية</a>
+        <a href="index.html" class="back-btn">الموافقة والعودة للرئيسية</a>
     </div>
 
     <footer>
-      &copy; 2026 منصة إشراق-ستيب التعليمية (Ishraq-Step). جميع الحقوق محفوظة
-    </footer>ع
+      &copy; 2026 منصة إشراق-ستيب (Ishraq-Step). جميع الحقوق محفوظة
+    </footer>
 </div>
 
 </body>
